--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Cognito - AI-powered educational platform for self-directed learners" />
 
-      <meta property="og:title" content="Cognito" />
-      <meta property="og:description" content="Cognito - AI-powered educational platform for self-directed learners" />
-      <meta property="og:image" content="/og.png" />
-      <meta property="og:type" content="website" />
-      <meta property="og:url" content="https://cognito-agent.vercel.app" />
-      
-      <!-- Twitter -->
-      <meta name="twitter:card" content="summary_large_image" />
-      <meta name="twitter:image" content="/opengraph-image.png" />
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Cognito - AI-powered educational platform for self-directed learners" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet" />
-    <title>Cognito - Learn Smarter</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+  <meta property="og:title" content="Cognito - Learn Smarter" />
+  <meta property="og:description" content="Cognito - AI-powered educational platform for self-directed learners." />
+  <meta property="og:image" content="https://cognito-agent.vercel.app/opengraph-image.png" />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://cognito-agent.vercel.app" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Cognito - Learn Smarter" />
+  <meta name="twitter:description" content="Cognito - AI-powered educational platform for self-directed learners." />
+  <meta name="twitter:image" content="https://cognito-agent.vercel.app/opengraph-image.png" />
+
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&family=Inter:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap"
+    rel="stylesheet" />
+  <title>Cognito - Learn Smarter</title>
+</head>
+
+<body>
+  <div id="root"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
