--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <meta property="og:description" content="Cognito - AI-powered educational platform for self-directed learners." />
   <meta property="og:image" content="https://cognito-agent.vercel.app/opengraph-image.png" />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://cognito-agent.vercel.app" />
+<meta property="og:url" content="https://cognito.software" />
 
   <!-- Twitter -->
   <meta name="twitter:card" content="summary_large_image" />
